--- a/style/style.css
+++ b/style/style.css
@@ -4,30 +4,85 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: montserrat, sans-serif;
 }
 
 header{
     background-color:#f49468;
     padding: 10px;
-    display: flex;justify-content: space-between;
+
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    
 
 }
 
 header > a{
     margin: 10px;
 }
-nav{
+header > nav{
+    text-align: center;
+
+
     display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
 
 }
 header nav > a {
     color: white;
+    font-size: 1.3em;
+    font-weight: 600;
     margin: 10px;
     text-decoration: none;
-    font-size: 1.3em;
+
 }
 header nav > a:hover{
     color: #692100;
 }
+main  p{
+    text-align: justify;
+    text-indent: 30px;
+}
 
+section{
+    margin: 10px;
+    padding: 10px;
+}
+
+#inicio{
+    display: flex;
+    flex-flow: row wrap;
+}
+#inicio > div{
+    flex:1 0 500px ;
+    align-content: center;
+}
+#clinica{
+    display: flex;
+    flex-flow:row wrap ;
+}
+#clinica > div{
+    flex: 1 0 500px;
+    align-content: center;
+}
+#farmacia{
+    display: flex;
+    flex-flow: row wrap;
+}
+#farmacia > div{
+    flex:1 0 500px;
+    align-content: center;
+}
+
+#duvidas{
+    display: flex;
+    flex-flow: row wrap;
+}
+
+#duvidas > div{
+    flex:1 1 500px ;
+
+}
