--- a/style/style.css
+++ b/style/style.css
@@ -51,7 +51,9 @@ section{
     margin: 10px;
     padding: 10px;
 }
-
+section > img{
+    max-width: 400px;
+}
 #inicio{
     display: flex;
     flex-flow: row wrap;
