--- a/style/style.css
+++ b/style/style.css
@@ -57,6 +57,45 @@ section > img{
 #inicio{
     display: flex;
     flex-flow: row wrap;
+    gap:32px;
+    padding: 12px;
+    position: relative;
+}
+h1, h2{
+    font-weight: 600px;
+    font-size: 2em;
+    margin:0px, 0px, 20px 0px;
+}
+.paragrafo{
+    line-height: 150%;
+    margin-bottom:30px;
+}
+.botao{
+    background-color: #f17109;
+    color: white;
+    padding: 15px;
+    margin: 10px;
+    border-radius: 15px;
+    text-decoration: none;
+
+}
+.botao:hover{
+    background-color: white;
+    color: #f17109;
+    transition: .5s;
+}
+.transparente{
+    background-color: rgb(180, 177, 177);
+    color:#f17109;
+    padding: 15px;
+    margin: 15px;
+    border-radius: 10px;
+    text-decoration: none;
+}
+.transparente:hover{
+    background-color: #ff4400;
+    color: white;
+    transition: .5s;
 }
 #inicio > div{
     flex:1 0 500px ;
@@ -76,7 +115,7 @@ section > img{
 }
 #farmacia > div{
     flex:1 0 500px;
-    align-content: center;
+    align-content:center;
 }
 
 #duvidas{
