--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,8 @@
 }
 
 header{
+    height: 100%;
+    width: 100%;
     background-color:#f49468;
     padding: 10px;
 
@@ -42,11 +44,10 @@ header nav > a {
 header nav > a:hover{
     color: #692100;
 }
-main  p{
+main{
     max-width: 500px;
-    text-align: justify;
-    text-indent: 30px;
 }
+
 
 section{
     margin: 10px;
@@ -58,6 +59,7 @@ section > img{
 #inicio{
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
     gap:32px;
     padding: 12px;
     position: relative;
@@ -106,6 +108,7 @@ h1, h2{
 #clinica{
     display: flex;
     flex-flow:row wrap ;
+    justify-content: center;
 }
 #clinica > div{
     flex: 1 1 500px;
@@ -114,6 +117,7 @@ h1, h2{
 #farmacia{
     display: flex;
     flex-flow: row wrap;
+    justify-content: ;
 }
 #farmacia > div{
     flex:1 1 500px;
@@ -123,6 +127,7 @@ h1, h2{
 #duvidas{
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
 }
 
 #duvidas > div{
