--- a/style/style.css
+++ b/style/style.css
@@ -117,7 +117,7 @@ h1, h2{
 #farmacia{
     display: flex;
     flex-flow: row wrap;
-    justify-content: ;
+    justify-content:center ;
 }
 #farmacia > div{
     flex:1 1 500px;
