--- a/style/media.css
+++ b/style/media.css
@@ -4,6 +4,9 @@
     #burguer{
         display: none;
     }
+    header > span{
+        display: none;
+    }
     header > nav{
         display: flex;
         flex-flow: row wrap ;
@@ -15,19 +18,23 @@
         width:580px;
         height: 580px;
     }
-    main > #clinica{
-        width: 480px;
-        height: 480px;
-
-    }
     main > #shop{
         width: 645px; 
         height: 438px;
     }
-    main > .botao{
+    .botao{
         display: inline-block;
     }
-    main > .transparente{
+    .transparente{
         display: inline-block;
+    }
+
+    .absolute{
+        width: 100%;
+        
+        position: absolute;
+        bottom: 0%;
+        left: 0%;
+        z-index: -10;
     }
 }
