--- a/style/media.css
+++ b/style/media.css
@@ -4,9 +4,6 @@
     #burguer{
         display: none;
     }
-    header > span{
-        display: none;
-    }
     header > nav{
         display: flex;
         flex-flow: row wrap ;
@@ -36,5 +33,14 @@
         bottom: 0%;
         left: 0%;
         z-index: -10;
+    }
+    #farmacia{
+        text-align: center;
+    }
+    #farmacia > img{
+        margin: auto;
+    }
+    #farmacia > p{
+        max-width: 950px;
     }
 }
