--- a/style/style.css
+++ b/style/style.css
@@ -149,6 +149,7 @@ h1, h2{
 }
 .duvida h3{
     padding: 15px;
+    margin: 10px;
     border: 2px solid #ff725e;
     border-radius: 8px;
     cursor: pointer;
@@ -167,12 +168,17 @@ h1, h2{
     margin-top: -8px;
     padding: 20px;
 }
+.paragrafo{
+    display: none;
+}
 
 footer{
     background-color: rgba(255, 152, 108, 0.367);
     padding: 20px;
 
     display: flex;
+    flex-flow: column wrap;
+    justify-content: space-between;
     gap: 80px;
 }
 
@@ -188,11 +194,14 @@ div nav > a{
     display: block;
     margin-bottom: 16px;
     text-decoration: none;
-    max-width: 360px;
+
 }
 div nav > a:hover{
     color: #fc3217;
     transition: 0.5s;
+}
+footer p {
+    max-width: 360px;
 }
 footer p a{
     color: #cc6d00;
@@ -213,5 +222,5 @@ footer p a:hover{
 
 #copy a{
     color: #8b1d02;
-    text-decoration: none;
+
 }
