--- a/style/media.css
+++ b/style/media.css
@@ -22,6 +22,9 @@
     img{
         max-width: 500px;
     }
+    .absolute{
+        width: 100%;
+    }
     .botao{
         display: inline-block;
     }
